[package]
name = "torrent-combine"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/mason-larobina/torrent-combine"
readme = "README.md"
authors = ["Mason Larobina <mason.larobina@pm.me>"]
description = "A tool to merge partially completed torrent data downloads."
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
tempfile = "3.20"
log = "0.4"
env_logger = "0.11"
rayon = "1.10"
